--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <noscript>
-      <strong>We're sorry but Quiz-a-tron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Quiz-a-tron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
     <div id="app"></div>
