--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>faviconfavicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>faviconfavicon-16x16.png">
+    <link rel="mask-icon" href="<%= BASE_URL %>favicon/safari-pinned-tab.svg" color="#462eb4">
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Quiz-a-tron">
+    <meta name="application-name" content="Quiz-a-tron">
+    <meta name="msapplication-TileColor" content="#f6fafb">
+    <meta name="theme-color" content="#f6fafb">
 
     <title>Quiz-a-tron</title>
   </head>
