FEATURE: Added some personality

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <meta name="msapplication-TileColor" content="#f6fafb">
     <meta name="theme-color" content="#f6fafb">
 
-    <title>Quiz-a-tron</title>
+    <title>Quiz-a-tron 1000</title>
   </head>
 
   <body>
     <noscript>
-      <strong>Quiz-a-tron doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Quiz-a-tron 1000 needs JavaScript to work, please feed it JavaScript it to continue.</strong>
     </noscript>
 
     <div id="app"></div>
